refactor: reorganize domain model according to DDD principles and remove unused Post class